crates/normalize-surface-syntax/tests/snapshots/snapshots__lua_reader__anonymous_function.snap
---
source: crates/normalize-surface-syntax/tests/snapshots.rs
expression: "parse(\"local add = function(a, b) return a + b end\")"
---
{
  "body": [
    {
      "Let": {
        "name": "add",
        "init": {
          "Function": {
            "name": "",
            "params": [
              {
                "name": "a"
              },
              {
                "name": "b"
              }
            ],
            "body": [
              {
                "Return": {
                  "Binary": {
                    "left": {
                      "Ident": "a"
                    },
                    "op": "Add",
                    "right": {
                      "Ident": "b"
                    }
                  }
                }
              }
            ]
          }
        },
        "mutable": true
      }
    }
  ]
}
