crates/normalize-surface-syntax/tests/snapshots/snapshots__lua_reader__function_call.snap
---
source: crates/normalize-surface-syntax/tests/snapshots.rs
assertion_line: 125
expression: "parse(\"print(\\\"hello\\\", 42)\")"
---
{
  "body": [
    {
      "Expr": {
        "Call": {
          "callee": {
            "Ident": "print"
          },
          "args": [
            {
              "Literal": {
                "String": "hello"
              }
            },
            {
              "Literal": {
                "Number": 42.0
              }
            }
          ]
        }
      }
    }
  ]
}
