crates/normalize-surface-syntax/tests/snapshots/snapshots__lua_reader__function_declaration.snap
---
source: crates/normalize-surface-syntax/tests/snapshots.rs
expression: "parse(\"function greet(name) return \\\"Hello, \\\" .. name end\")"
---
{
  "body": [
    {
      "Function": {
        "name": "greet",
        "params": [
          {
            "name": "name"
          }
        ],
        "body": [
          {
            "Return": {
              "Binary": {
                "left": {
                  "Literal": {
                    "String": "Hello, "
                  }
                },
                "op": "Concat",
                "right": {
                  "Ident": "name"
                }
              }
            }
          }
        ]
      }
    }
  ]
}
