crates/normalize-surface-syntax/tests/snapshots/snapshots__lua_reader__generic_for.snap
---
source: crates/normalize-surface-syntax/tests/snapshots.rs
expression: "parse(\"for k, v in pairs(t) do print(k, v) end\")"
---
{
  "body": [
    {
      "ForIn": {
        "variable": "k, v",
        "iterable": {
          "Call": {
            "callee": {
              "Ident": "pairs"
            },
            "args": [
              {
                "Ident": "t"
              }
            ]
          }
        },
        "body": {
          "Block": [
            {
              "Expr": {
                "Call": {
                  "callee": {
                    "Ident": "print"
                  },
                  "args": [
                    {
                      "Ident": "k"
                    },
                    {
                      "Ident": "v"
                    }
                  ]
                }
              }
            }
          ]
        }
      }
    }
  ]
}
