crates/normalize-surface-syntax/tests/snapshots/snapshots__lua_reader__local_variable.snap
---
source: crates/normalize-surface-syntax/tests/snapshots.rs
assertion_line: 105
expression: "parse(\"local x = 42\")"
---
{
  "body": [
    {
      "Let": {
        "name": "x",
        "init": {
          "Literal": {
            "Number": 42.0
          }
        },
        "mutable": true
      }
    }
  ]
}
