crates/normalize-surface-syntax/tests/snapshots/snapshots__lua_reader__multiple_return.snap
---
source: crates/normalize-surface-syntax/tests/snapshots.rs
expression: "parse(\"function swap(a, b) return b, a end\")"
---
{
  "body": [
    {
      "Function": {
        "name": "swap",
        "params": [
          {
            "name": "a"
          },
          {
            "name": "b"
          }
        ],
        "body": [
          {
            "Return": {
              "Array": [
                {
                  "Ident": "b"
                },
                {
                  "Ident": "a"
                }
              ]
            }
          }
        ]
      }
    }
  ]
}
